# Restaurant-Client

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
Restaurant_Client/: AppContext.cpp  AppContext.h  CMakeLists.txt  main.cpp
Restaurant_Client/services/authService/: AuthService.cpp  AuthService.h
Restaurant_Client/services/receptionService/: ReservationService.cpp  ReservationService.h
Restaurant_Client/src/: MainWindow.cpp  MainWindow.h
Restaurant_Client/src/login/: Login.cpp  Login.h  LoginController.cpp  LoginController.h
Restaurant_Client/src/reception/: Reception.cpp  Reception.h  ReceptionController.cpp  ReceptionController.h
Restaurant_Client/view/: MainWindow.ui
Restaurant_Client/view/qml/reception/: Config.qml  FilterPanel.qml  Reception.qml  Reservations.qml  Tables.qml
Restaurant_Client/view/qml/reception/filterComponents/: DateRangeField.qml  MiniToggle.qml  SectionLabel.qml  StyledSpinBox.qml  TimeRangeField.qml  ToggleFilterButton.qml
Restaurant_Client/view/qml/reception/generalComponents/: CloseButton.qml
Restaurant_Client/view/qt/login/: Login.ui
Restaurant_Client/view/qt/reception/: Reception.ui
Restaurant_Client/view/qt/utils/: error.ui
